[gd_scene load_steps=24 format=3 uid="uid://bxk2suox4ydc"]

[ext_resource type="Script" path="res://assets/enemies/enemy_suzy_g.gd" id="1_olggt"]
[ext_resource type="Texture2D" uid="uid://bf31u8jsi81xo" path="res://sprites/megaman.png" id="2_1desg"]
[ext_resource type="AudioStream" uid="uid://deqgmncr6ciaq" path="res://audio/sfx/sfx_enemy_damaged.wav" id="2_xlj2h"]
[ext_resource type="Texture2D" uid="uid://ctxsnjqaeotq8" path="res://sprites/enemies_transparent.png" id="3_6vm1d"]
[ext_resource type="PackedScene" uid="uid://cedrej40vfvit" path="res://assets/common/fx/flasher.tscn" id="4_d5ifw"]
[ext_resource type="Shader" path="res://assets/common/fx/flasher.gdshader" id="5_7qj3o"]
[ext_resource type="PackedScene" uid="uid://dxawnndxl6n7e" path="res://assets/common/actions/shooter.tscn" id="6_0v6py"]
[ext_resource type="PackedScene" uid="uid://dxyoaokygwp3n" path="res://assets/enemies/bullets/enemy_bullet.tscn" id="7_nxfch"]
[ext_resource type="PackedScene" uid="uid://dsmq5iecsqxye" path="res://assets/common/globals/gravity_reactor_enemy.tscn" id="8_bqd6e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f1h5d"]
atlas = ExtResource("2_1desg")
region = Rect2(204, 164, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qxi8"]
atlas = ExtResource("2_1desg")
region = Rect2(228, 164, 19, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgbe5"]
atlas = ExtResource("2_1desg")
region = Rect2(245, 164, 19, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6y8j"]
atlas = ExtResource("2_1desg")
region = Rect2(262, 164, 19, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4gyy"]
atlas = ExtResource("3_6vm1d")
region = Rect2(917, 619, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_htl0s"]
atlas = ExtResource("3_6vm1d")
region = Rect2(1049, 619, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqcys"]
atlas = ExtResource("3_6vm1d")
region = Rect2(983, 619, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk4bq"]
atlas = ExtResource("3_6vm1d")
region = Rect2(950, 619, 24, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_68icu"]
atlas = ExtResource("3_6vm1d")
region = Rect2(917, 619, 24, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_cul56"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1h5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qxi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgbe5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6y8j")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4gyy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_htl0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqcys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk4bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68icu")
}],
"loop": true,
"name": &"shoot",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fx4d6"]
size = Vector2(17, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjkrf"]
size = Vector2(185, 100)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lsw3u"]
resource_local_to_scene = true
shader = ExtResource("5_7qj3o")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_intensity = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ba2i"]
size = Vector2(16, 24)

[node name="SuzyG" type="CharacterBody2D" node_paths=PackedStringArray("animated_sprite_2d", "collider_physics", "flasher")]
collision_layer = 4
script = ExtResource("1_olggt")
enemy_name = "suzy_g"
hp = 3
damage_shot = 2
damage_touch = 4
death_animation_name = "death"
animated_sprite_2d = NodePath("AnimatedSprite2D")
collider_physics = NodePath("CollisionShape2D")
flasher = NodePath("Flasher")
muzzle_position_x = 11.0
muzzle_position_y = -15.0
collider_position_gravity_down = Vector2(0, -12)
collider_position_gravity_up = Vector2(0, -14)
audio_damaged = ExtResource("2_xlj2h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_cul56")
animation = &"idle"
autoplay = "idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_fx4d6")

[node name="Muzzle" type="Node2D" parent="."]
position = Vector2(11, -15)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
position = Vector2(1.5, -50)
shape = SubResource("RectangleShape2D_qjkrf")

[node name="Flasher" parent="." instance=ExtResource("4_d5ifw")]
material = SubResource("ShaderMaterial_lsw3u")
position = Vector2(0, -14)

[node name="Shooter" parent="." instance=ExtResource("6_0v6py")]
bullet = ExtResource("7_nxfch")

[node name="DamageArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_6ba2i")

[node name="GravityReactor" parent="." node_paths=PackedStringArray("enemy") instance=ExtResource("8_bqd6e")]
enemy = NodePath("..")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
